packages/compiler-rs/tests/snapshots/custom_directive__dynamic_argument.snap
---
source: tests/custom_directive.rs
expression: code
---
import { template as _template, withVaporDirectives as _withVaporDirectives } from "vue";
const t0 = _template("<div></div>", true);
(() => {
  const n0 = t0();
  _withVaporDirectives(n0, [[
    vExample,
    () => msg,
    foo
  ]]);
  return n0;
})();
